--- a/pig.html
+++ b/pig.html
@@ -2,21 +2,9 @@
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-
-    $("#showPig").click(function(){
-        $("#pig").show();
-    });
-
-    $("#hidePig").click(function(){
-        $("#pig").hide();
-    });
-});
-</script>
+<script src ="my_script.js"></script>
 </head>
 <body>
-
   <input type='button' value='Show' id="showPig" />
   <input type='button' value='Hide' id="hidePig" />
   <div><img id="pig" src="http://www.authorsden.com/PoetryImage/123567.jpg" alt="flying pig"></div>
