--- a/pig.html
+++ b/pig.html
@@ -6,9 +6,11 @@
 <link rel="stylesheet" type="text/css" href="my_style.css">
 </head>
 <body>
-  <h1>When Pigs Fly</h1>
+  <h1>When Pigs Fly 2</h1>
   <input type='button' value='Show' id="showPig" />
   <input type='button' value='Hide' id="hidePig" />
+  <input type='button' value='Fly' id="flyPig" />
   <div><img id="pig" src="http://www.authorsden.com/PoetryImage/123567.jpg" alt="flying pig"></div>
+  <div><img id="pig2" src="http://www.authorsden.com/PoetryImage/123567.jpg" alt="flying pig"></div>
 </body>
 </html>
